...
        }

        Button(
            onClick = onOpenCamera,
            modifier = Modifier.fillMaxWidth()
        ) {
            Text(text = "Abrir cámara")
        }
    }
}

